Swagger authorize token works
