# src/controller/todo.ts
@@ -17,27 +17,27 @@ export class TodoController {
     private tokenService:token;
 
     @POST
-    public async addTodo(newinfo:addtodo, @HeaderParam("authentication") authentication:string): Promise<string|TodoModel> {
-      await this.tokenService.checkAccessToken(authentication);
-      const userId:number = await this.tokenService.getUserIdbyAccessToken(authentication);
+    public async addTodo(newinfo:addtodo, @HeaderParam("Authorization") Authorization:string): Promise<string|TodoModel> {
+      await this.tokenService.checkAccessToken(Authorization);
+      const userId:number = await this.tokenService.getUserIdbyAccessToken(Authorization);
       const result:TodoModel = await this.todoService.addService(newinfo, userId);
       return result;
     }
 
 
     @PUT
-    public async updateTodo(updateinfo:updatetodo, @HeaderParam("authentication") authentication:string): Promise<string> {
-      await this.tokenService.checkAccessToken(authentication);
-      const userId:number = await this.tokenService.getUserIdbyAccessToken(authentication);
+    public async updateTodo(updateinfo:updatetodo, @HeaderParam("Authorization") Authorization:string): Promise<string> {
+      await this.tokenService.checkAccessToken(Authorization);
+      const userId:number = await this.tokenService.getUserIdbyAccessToken(Authorization);
       await this.todoService.updateService(updateinfo, userId);
       return "Successfully updated todo";
     }
 
     @GET
     @Path(":date")
-    public async getTodo(@PathParam("date") date: string, @HeaderParam("authentication") authentication:string):Promise<Array<TodoModel>> {
-      await this.tokenService.checkAccessToken(authentication);
-      const userId:number = await this.tokenService.getUserIdbyAccessToken(authentication);
+    public async getTodo(@PathParam("date") date: string, @HeaderParam("Authorization") Authorization:string):Promise<Array<TodoModel>> {
+      await this.tokenService.checkAccessToken(Authorization);
+      const userId:number = await this.tokenService.getUserIdbyAccessToken(Authorization);
       const result:Array<TodoModel> = await this.todoService.getService(userId, date);
       return result;
     }
@@ -45,9 +45,9 @@ export class TodoController {
 
     @DELETE
     @Path(":todoid")
-    public async deleteTodo(@PathParam("todoid") todoid: number, @HeaderParam("authentication") authentication:string): Promise<string> {
-      await this.tokenService.checkAccessToken(authentication);
-      const userId:number = await this.tokenService.getUserIdbyAccessToken(authentication);
+    public async deleteTodo(@PathParam("todoid") todoid: number, @HeaderParam("Authorization") Authorization:string): Promise<string> {
+      await this.tokenService.checkAccessToken(Authorization);
+      const userId:number = await this.tokenService.getUserIdbyAccessToken(Authorization);
       return await this.todoService.deleteService(todoid, userId);
     }
 }
